k8s/app/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ant-fileserver
spec:
  selector:
    app: ant-fileserver
  ports:
    - port: 80
      targetPort: 8000
  type: ClusterIP
